# cookie-cutter-sm-ds

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
