[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/.#egg=src"]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Stuart McGibbon", email = "mcgibbonstuart@gmail.com"},
]
dependencies = ["click", "Sphinx", "coverage", "awscli", "flake8", "python-dotenv>=0.5.1"]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
